--- a/footer/__container/footer__container.css
+++ b/footer/__container/footer__container.css
@@ -2,19 +2,13 @@
   margin: 0 auto;
   padding: 0 24px 0 24px;
   box-sizing: border-box;
-  min-width: 856px;
+  min-width: 840px;
   max-width: 1168px;
   display: grid;
   grid-template-areas:
   "info-content"
   "media"
   "copyright";
-}
-
-@media screen and (max-width: 880px) {
-  .footer__container {
-    padding: 0 5px 0 5px;
-  }
 }
 
 @media screen and (max-width: 856px) {
